Add 'fips' Cargo feature
Add `rustls::crypto::default_fips_provider()` behind this
feature.

--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -31,6 +31,7 @@ aws_lc_rs = ["dep:aws-lc-rs", "webpki/aws_lc_rs"]
 ring = ["dep:ring", "webpki/ring"]
 tls12 = []
 read_buf = ["rustversion"]
+fips = ["aws_lc_rs", "aws-lc-rs?/fips"]
 
 [dev-dependencies]
 base64 = "0.21"
